[package]
name = "votre_nom_de_projet" # Remplacez par le nom de votre projet
version = "0.1.0"
authors = ["Votre Nom <votre.email@example.com>"]
edition = "2021"

# Voir https://doc.rust-lang.org/cargo/reference/manifest.html pour la documentation du format du fichier Cargo.toml

[dependencies]
aes-gcm = "0.9"
rand = "0.8"
scrypt = "0.11"
dirs = "4"

[profile.release]
lto = true # Optimisation pour réduire la taille du binaire
codegen-units = 1 # Optimisation pour réduire la taille du binaire

[target.x86_64-pc-windows-gnu]
linker = "rust-lld"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
